--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Favicon -->
-    <link id='favicon' rel="shortcut icon" href="./assets/images/_1.png" type="image/x-png">
+    <link id='_1.' rel="shortcut icon" href="./assets/images/_1.png" type="image/x-png">
     <title>Portfolio | FazriYansyah</title>
 </head>
 <body oncontextmenu="return false">
@@ -45,7 +45,7 @@
 <section class="home" id="home">
     <div id="particles-js"></div>
 
-    <div class="content">
+    <br/><div class="content">
     <br/><h2>Hi There,<br/> I'm Fazri <span>Yansyah</span></h2>
     <p>i am into <span class="typing-text"></span></p>
     <a href="#about" class="btn"><span>About Me</span>
