--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <img draggable="false" class="tilt" src="./assets/images/profile2.jpg" alt="">
     </div>
     <div class="content">
-        <h3>I'm Fazry</h3>
+        <h3>I'm Fazry Yansyah</h3>
         <span class="tag">Full Stack Developer</span>
         
         <p>saya seorang pelajar yang berusaha untuk mengembangkan skil dan mempunyai keinginan untuk bisa menguasai
@@ -88,8 +88,7 @@
               <p><span> phone : </span> +91 XXX-XXX-XXXX</p>
             </div> -->
             <div class="box">
-              <p><span> email : </span> jigarsable21@gmail.com</p>
-              <p><span> place : </span> Pune, India - 412206</p>
+              <p><span> email : </span> fazrigg18@gmail.com</p>
             </div>
         </div>
         
