--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="row">
 
     <div class="image">
-        <img draggable="false" class="tilt" src="./assets/images/profile2.jpg" alt="">
+        <img src="_1.png" alt="profile picture">
     </div>
     <div class="content">
         <h3>I'm Fazri Yansyah</h3>
