--- a/index.html
+++ b/index.html
@@ -53,12 +53,9 @@
     </a>
     <div class="socials">
         <ul class="social-icons">
-          <li><a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/jigar-sable/" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
-          <li><a class="github" aria-label="GitHub" href="https://github.com/jigar-sable" target="_blank"><i class="fab fa-github"></i></a></li>
-          <li><a class="twitter" aria-label="Twitter" href="https://twitter.com/jigar_sable" target="_blank"><i class="fab fa-twitter"></i></a></li>
-          <li><a class="telegram" aria-label="Telegram" href="https://t.me/lifecode5" target="_blank"><i class="fab fa-telegram-plane"></i></a></li>
-          <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/jigarsable.dev"><i class="fab fa-instagram" target="_blank"></i></a></li>
-          <li><a class="dev" aria-label="Dev" href="https://dev.to/jigarsable" target="_blank"><i class="fab fa-dev"></i></a></li>
+          <li><a class="github" aria-label="GitHub" href="https://github.com/FazZenterprise" target="_blank"><i class="fab fa-github"></i></a></li>
+          <li><a class="telegram" aria-label="Telegram" href="https://t.me/prsetdragnel" target="_blank"><i class="fab fa-telegram-plane"></i></a></li>
+          <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/siegrain_08?igsh=MXB6Z280cHA4MmVjbA=="><i class="fab fa-instagram" target="_blank"></i></a></li>
         </ul>
       </div>
     </div>
@@ -76,7 +73,7 @@
     <div class="row">
 
     <div class="image">
-        <img src="Fazri.jpg" alt="profile picture">
+        <img src="FotoSaya.jpg" alt="profile picture">
     </div>
     <div class="content">
         <h3>I'm Fazri Yansyah</h3>
