--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
     </div>
 <div class="image">
-    <img draggable="false" class="tilt" src="./assets/images/_1.png" alt="">
+    <img src="_1.png" alt="picture">
 </div>
 </section>
 <!-- hero section ends -->
