--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
     </div>
 <div class="image">
-    <img src="_1.png" alt="picture">
+    <img src="Fazri.jpg" alt="picture">
 </div>
 </section>
 <!-- hero section ends -->
