--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Favicon -->
-    <link href="crop_picture_1719639790" type="image/x-png">
+    <link href="crop_picture_1719639790.jpg" type="image/x-png">
     <title>Portfolio | Fazri Yansyah</title>
 </head>
 <body oncontextmenu="return false">
@@ -57,8 +57,6 @@
           <li><a class="telegram" aria-label="Telegram" href="https://t.me/prsetdragnel" target="_blank"><i class="fab fa-telegram-plane"></i></a></li>
           <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/siegrain_08?igsh=MXB6Z280cHA4MmVjbA=="><i class="fab fa-instagram" target="_blank"></i></a></li>
         </ul>
-        class="image">
-    <img src="Fazri.jpg" alt="picture">
       </div>
     </div>
 <div class="image">
@@ -130,7 +128,7 @@
 <!-- education section starts -->
 <section class="education" id="education">
 
-  <h1 class="heading"><i class="fas fa-graduation-cap"></i> My <span>Education</span></h1>
+  <h1 class="heading"><i class="fas fa-graduation-cap"></i> Pendidikan <span>Saya</span></h1>
 
     <p class="qoute">Education is not the learning of facts, but the training of the mind to think.</p>
 
