--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Favicon -->
-    <link href="crop_picture_1719639790.jpg" type="image/x-png">
+    <img src="crop_picture_1719639790.jpg" alt="Pict">
     <title>Portfolio | Fazri Yansyah</title>
 </head>
 <body oncontextmenu="return false">
@@ -139,9 +139,9 @@
         <img draggable="false" src="./assets/images/educat/college.jpg" alt="">
         </div>
         <div class="content">
-        <h3>Bachelor of Engineering in Information Technology</h3>
-        <p>Zeal College of engineering and research | SPPU</p>
-        <h4>2020-2024 | Pursuing</h4>
+        <h3>SMKN 12 KABUPATEN TANGERANG</h3>
+        <p>An Attractive School That Implements the Military System</p>
+        <h4>2024-2027 | Pursuing</h4>
         </div>
     </div>
 
@@ -150,9 +150,9 @@
       <img draggable="false" src="./assets/images/educat/school.jpg" alt="">
       </div>
       <div class="content">
-      <h3>HSC Science | Informatic Practices</h3>
-      <p>Shri  L. G. Haria Multipurpose School | CBSE</p>
-      <h4>2018-2020 | Completed</h4>
+      <h3>MTs NURULHUDA MALANGNENGAH</h3>
+      <p>A School That Focuses On Religion And Is Quite Interesting </p>
+      <h4>2021-2024 | Completed</h4>
       </div>
     </div>
 
