--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Favicon -->
-    <img src="crop_picture_1719639790.jpg" alt="Pict">
+    <link href="crop_picture_1719639790.jpg" type="image">
     <title>Portfolio | Fazri Yansyah</title>
 </head>
 <body oncontextmenu="return false">
@@ -139,7 +139,7 @@
         <img draggable="false" src="./assets/images/educat/college.jpg" alt="">
         </div>
         <div class="content">
-        <h3>SMKN 12 KABUPATEN TANGERANG</h3>
+        <h3>SMKN12 Kabupaten Tangerang</h3>
         <p>An Attractive School That Implements the Military System</p>
         <h4>2024-2027 | Pursuing</h4>
         </div>
@@ -150,7 +150,7 @@
       <img draggable="false" src="./assets/images/educat/school.jpg" alt="">
       </div>
       <div class="content">
-      <h3>MTs NURULHUDA MALANGNENGAH</h3>
+      <h3>MTs NurulHuda Malangnengah</h3>
       <p>A School That Focuses On Religion And Is Quite Interesting </p>
       <h4>2021-2024 | Completed</h4>
       </div>
