--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Favicon -->
-    <link href="crop_picture_1719639790.jpg" type="image">
+    <link rel="icon" type="image/png" href="im.png">
     <title>Portfolio | Fazri Yansyah</title>
 </head>
 <body oncontextmenu="return false">
