--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <!-- navbar starts -->
 <header>
-        <a href="im.png" class="logo"><i class="fab fa-node-js"></i> Fazry</a>
+        <a href="im.png" class="logo"><i class="fab fa-FZ"></i> Fazry</a>
 
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
