--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <!-- navbar starts -->
 <header>
-        <img src="im.png" alt="Gambar baru" class="profile-image">Fazry
+        <img src="im.png" alt="Gambar baru" class="profile-image"><h3>Fazry</h3>
 
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
