--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 
 <!-- navbar starts -->
 <header>
-        <img src="im.png" alt="Gambar baru" class="profile-image"><h3>Fazry</h3>
-
+        <div>
+            <img src="im.png" alt="Gambar baru" class="profile-image"><h3>Fazry</h3>
+        </div>
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
             <ul>
