--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
 
     <div class="box">
         <div class="image">
-        <img draggable="false" src="./assets/images/educat/college.jpg" alt="">
+        <img draggable="false" src="SMKN12.jpg" alt="">
         </div>
         <div class="content">
-        <h3>SMKN12 Kabupaten Tangerang</h3>
+        <h3>SMK Negeri 12 Kabupaten Tangerang</h3>
         <p>An Attractive School That Implements the Military System</p>
         <h4>2024-2027 | Pursuing</h4>
         </div>
@@ -147,7 +147,7 @@
 
     <div class="box">
       <div class="image">
-      <img draggable="false" src="./assets/images/educat/school.jpg" alt="">
+      <img draggable="false" src="MTS.jpg" alt="">
       </div>
       <div class="content">
       <h3>MTs NurulHuda Malangnengah</h3>
