--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
         
         <div class="resumebtn">
-            <a href="officialkaminari.blogspot.com" target="_blank" class="btn"><span>My Blog</span>
+            <a href="https://officialkaminari.blogspot.com/" target="_blank" class="btn"><span>My Blog</span>
                 <i class="fas fa-chevron-right"></i>
             </a>
         </div>
@@ -164,9 +164,9 @@
 <!-- work project section starts -->
 <section class="work" id="work">
 
-  <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
+  <h2 class="heading"><i class="fas fa-laptop-code"></i> My <span>Project</span></h2>
 
-  <div class="box-container">
+  
 
         <!-- <div class="box tilt">
       <img draggable="false" src="./assets/images/projects/portfolio1.PNG" alt="" />
@@ -184,7 +184,7 @@
       </div>
     </div> -->
 
-</div>
+
 
 </section>
 <!-- work project section ends -->
