--- a/index.html
+++ b/index.html
@@ -154,6 +154,17 @@
       </div>
     </div>
 
+    <div class="box">
+      <div class="image">
+      <img draggable="false" src="SD.jpg" alt="">
+      </div>
+      <div class="content">
+      <h3>SD Negeri Kamuning</h3>
+      <p>A School That Focuses On Religion And Is Quite Interesting </p>
+      <h4>2021-2024 | Completed</h4>
+      </div>
+    </div>
+
 </div>
 </section>
 <!-- education section ends -->
