--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </div>
         <div class="content">
         <h3>SMK Negeri 12 Kabupaten Tangerang</h3>
-        <p>An Attractive School That Implements the Military System</p>
+        <p>An Attractive School That Implements the Military System. </p>
         <h4>2024-2027 | Pursuing</h4>
         </div>
     </div>
@@ -149,7 +149,7 @@
       </div>
       <div class="content">
       <h3>MTs NurulHuda Malangnengah</h3>
-      <p>A School That Focuses On Religion And Is Quite Interesting </p>
+      <p>A School That Focuses On Religion And Is Quite Interesting. </p>
       <h4>2021-2024 | Completed</h4>
       </div>
     </div>
@@ -160,7 +160,7 @@
       </div>
       <div class="content">
       <h3>SD Negeri Kamuning</h3>
-      <p>A School That Focuses On Religion And Is Quite Interesting </p>
+      <p>A school that I think has a lot of unforgettable memories at this school. </p>
       <h4>2021-2024 | Completed</h4>
       </div>
     </div>
