--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
     </div>
 <div class="image">
-    <img src="Fazri.jpg" alt="picture">
+    <img src="Fav.jpg" alt="picture">
 </div>
 </section>
 <!-- hero section ends -->
