--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
     </div>
 <div class="image">
-    <img src="Fav.jpg" alt="picture">
+    <img src="fav.jpg" alt="picture">
 </div>
 </section>
 <!-- hero section ends -->
@@ -151,17 +151,6 @@
       <h3>MTs NurulHuda Malangnengah</h3>
       <p>A School That Focuses On Religion And Is Quite Interesting. </p>
       <h4>2021-2024 | Completed</h4>
-      </div>
-    </div>
-
-    <div class="box">
-      <div class="image">
-      <img draggable="false" src="SD.jpg" alt="">
-      </div>
-      <div class="content">
-      <h3>SD Negeri Kamuning</h3>
-      <p>A school that I think has a lot of unforgettable memories at this school. </p>
-      <h4>2016-2021 | Completed</h4>
       </div>
     </div>
 
