--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
 
     <h2 class="heading"><i class="fas fa-laptop-code"></i> Skills & <span>Abilities</span></h2>
 
-    
+    <div class="container">
+          <div class="row" id
+              ="skillsContainer">
 
             <!-- <div class="bar">
               <div class="info">
