--- a/index.html
+++ b/index.html
@@ -108,9 +108,10 @@
 
     <h2 class="heading"><i class="fas fa-laptop-code"></i> Skills & <span>Abilities</span></h2>
 
-    <div class="container">
-          <div class="row" id
-              ="skillsContainer">
+    <div class="skill">
+    <img src="https://img.icons8.com/?size=100&id=aZKKHRzL5LgV&format=png&color=000000" alt="Alightmotion">
+    <p>Alightmotion</p>
+    </div>
 
             <!-- <div class="bar">
               <div class="info">
