--- a/index.html
+++ b/index.html
@@ -108,10 +108,7 @@
 
     <h2 class="heading"><i class="fas fa-laptop-code"></i> Skills & <span>Abilities</span></h2>
 
-    <div class="skill">
-    <img src="https://img.icons8.com/?size=100&id=aZKKHRzL5LgV&format=png&color=000000" alt="Alightmotion">
-    <p>Alightmotion</p>
-    </div>
+    
 
             <!-- <div class="bar">
               <div class="info">
@@ -157,6 +154,17 @@
       </div>
     </div>
 
+    <div class="box">
+      <div class="image">
+      <img draggable="false" src="MTS.jpg" alt="">
+      </div>
+      <div class="content">
+      <h3>SD Negeri Kamuning</h3>
+      <p>It is a joy for me to be educated here, I remember many things at this school </p>
+      <h4>2016-2021 | Completed</h4>
+      </div>
+    </div>
+
 </div>
 </section>
 <!-- education section ends -->
@@ -167,7 +175,7 @@
 
   <h2 class="heading"><i class="fas fa-laptop-code"></i> My <span>Project</span></h2>
 
-  
+  <div class="box-container">
 
         <!-- <div class="box tilt">
       <img draggable="false" src="./assets/images/projects/portfolio1.PNG" alt="" />
@@ -185,7 +193,7 @@
       </div>
     </div> -->
 
-
+  </div>
 
 </section>
 <!-- work project section ends -->
