--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
     <div class="box">
       <div class="image">
-      <img draggable="false" src="MTS.jpg" alt="">
+      <img draggable="false" src="SD.jpg" alt="">
       </div>
       <div class="content">
       <h3>SD Negeri Kamuning</h3>
