--- a/404.html
+++ b/404.html
@@ -25,8 +25,6 @@
             <li><a href="/#skills">Skills</a></li>
             <li><a href="/#education">Education</a></li>
             <li><a href="/#work">Work</a></li>
-            <li><a href="/#experience">Experience</a></li>
-            <li><a href="/#contact">Contact</a></li>
             </ul>
         </nav>
 </header>
@@ -61,7 +59,7 @@
   <div class="box-container">
 
       <div class="box">
-          <h3>Jigar's Portfolio</h3>
+          <h3>Fazry Portfolio</h3>
           <p>Thank you for visiting my personal portfolio website. Connect with me over socials. <br/> <br/> Keep Rising 🚀. Connect with me over live chat!</p>
       </div>
 
@@ -72,7 +70,6 @@
           <a href="/#skills"><i class="fas fa-chevron-circle-right"></i> skills</a>
           <a href="/#education"><i class="fas fa-chevron-circle-right"></i> education</a>
           <a href="/#work"><i class="fas fa-chevron-circle-right"></i> work</a>
-          <a href="/#experience"><i class="fas fa-chevron-circle-right"></i> experience</a>
       </div>
 
       <div class="box">
@@ -81,17 +78,12 @@
           <p> <i class="fas fa-envelope"></i>jigarsable21@gmail.com</p>
           <p> <i class="fas fa-map-marked-alt"></i>Pune, India-412206</p>
           <div class="share">
-
-              <a href="https://www.linkedin.com/in/jigar-sable" class="fab fa-linkedin" target="_blank"></a>
-              <a href="https://github.com/jigar-sable" class="fab fa-github" target="_blank"></a>
-              <a href="mailto:jigarsable21@gmail.com" class="fas fa-envelope" target="_blank"></a>
-              <a href="https://twitter.com/jigar_sable" class="fab fa-twitter" target="_blank"></a>
-              <a href="https://t.me/lifecode5" class="fab fa-telegram-plane" target="_blank"></a>
+              <a href="https://github.com/FazZenterprise" class="fab fa-github" target="_blank"></a>
+              <a href="mailto:fazzdevice@gmail.com" class="fas fa-envelope" target="_blank"></a>
+              <a href="https://t.me/prsetdragnel" class="fab fa-telegram-plane" target="_blank"></a>
           </div>
       </div>
   </div>
-
-  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/jigar-sable"> jigar sable</a></h1>
 
 </section>
 <!-- footer section ends -->
