--- a/index.html
+++ b/index.html
@@ -13,6 +13,64 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="im.png">
     <title>Portfolio | Fazri Yansyah</title>
+    <style>
+        * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    color: black;
+    background-color: white; /* Background default putih */
+    overflow: hidden;
+}
+
+.cover-container {
+    text-align: center;
+    animation: fadeIn 2s ease-in-out;
+}
+
+.cover-image img {
+    width: 640px; /* Width gambar disesuaikan untuk aspect ratio 16:9 */
+    height: 360px; /* Height untuk 16:9 ratio */
+    border-radius: 15px;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2); /* Soft shadow */
+    animation: fadeIn 2s ease-in-out;
+}
+
+.image-caption {
+    margin-top: 10px;
+    font-size: 1.2rem;
+    animation: fadeIn 2.5s ease-in-out;
+}
+
+.view-btn {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #61dafb;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1.2rem;
+    color: black;
+    animation: fadeIn 3s ease-in-out;
+}
+
+.view-btn:hover {
+    background-color: #21a1f1;
+}
+
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+</style>
 </head>
 <body oncontextmenu="return false">
 
@@ -176,7 +234,13 @@
 
   <h2 class="heading"><i class="fas fa-laptop-code"></i> My <span>Project</span></h2>
 
-  <div class="box-container">
+  <div class="cover-container">
+        <div class="cover-image">
+            <img src="your-image.jpg" alt="Project Cover">
+        </div>
+        <p class="image-caption">This is the cover of my project</p>
+        <button class="view-btn">View</button>
+  </div>
 
         <!-- <div class="box tilt">
       <img draggable="false" src="./assets/images/projects/portfolio1.PNG" alt="" />
@@ -193,8 +257,6 @@
         </div>
       </div>
     </div> -->
-
-  </div>
 
 </section>
 <!-- work project section ends -->
