--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Favicon -->
-    <title>Portfolio | Jigar Sable</title>
+    <link rel="icon" href="im.png" type="image/png">
+    <title>Portfolio | Fazri Yansyah</title>
 </head>
 <body oncontextmenu="return false">
 
@@ -50,9 +51,9 @@
     </a>
     <div class="socials">
         <ul class="social-icons">
-          <li><a class="github" aria-label="GitHub" href="https://github.com/jigar-sable" target="_blank"><i class="fab fa-github"></i></a></li>
-          <li><a class="telegram" aria-label="Telegram" href="https://t.me/lifecode5" target="_blank"><i class="fab fa-telegram-plane"></i></a></li>
-          <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/jigarsable.dev"><i class="fab fa-instagram" target="_blank"></i></a></li>
+          <li><a class="github" aria-label="GitHub" href="https://github.com/FazZenterprise" target="_blank"><i class="fab fa-github"></i></a></li>
+          <li><a class="telegram" aria-label="Telegram" href="https://t.me/prsetdragnel" target="_blank"><i class="fab fa-telegram-plane"></i></a></li>
+          <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/siegrain_08?igsh=MXB6Z280cHA4MmVjbA=="><i class="fab fa-instagram" target="_blank"></i></a></li>
         </ul>
       </div>
     </div>
@@ -132,33 +133,33 @@
 
     <div class="box">
         <div class="image">
-        <img draggable="false" src=SMKN12.jpg" alt="">
+        <img draggable="false" src=SMKN12.jpg" alt="pict">
         </div>
         <div class="content">
         <h3>SMK Negeri 12 Kabupaten Tangerang</h3>
-        <p>Zeal College of engineering and research | SPPU</p>
+        <p>A school that is different from others is that it uses a military system, and I was educated here in the | PPLG department.</p>
         <h4>2024-2027 | Pursuing</h4>
         </div>
     </div>
 
     <div class="box">
       <div class="image">
-      <img draggable="false" src="MTS.jpg" alt="">
+      <img draggable="false" src="MTS.jpg" alt="pict">
       </div>
       <div class="content">
       <h3>MTs Nurul Huda Malangnengah</h3>
-      <p>Shri  L. G. Haria Multipurpose School | CBSE</p>
+      <p>A school that focuses on religious knowledge and is quite interesting</p>
       <h4>2021-2024 | Completed</h4>
       </div>
     </div>
 
     <div class="box">
       <div class="image">
-      <img draggable="false" src="SD.jpg" alt="">
+      <img draggable="false" src="SD.jpg" alt="pict">
       </div>
       <div class="content">
       <h3>SD Negeri Kamuning</h3>
-      <p>Shri  L. G. Haria Multipurpose School | CBSE</p>
+      <p>This school is full of beautiful memories for me, and this elementary school is quite good and there are lots of memories in it.</p>
       <h4>2016-2021 | Completed</h4>
       </div>
     </div>
@@ -210,7 +211,7 @@
 
       <div class="box">
           <h3>FazrYanz Portfolio</h3>
-          <p>Thank you for visiting my personal portfolio website. Connect with me over socials.</p>
+          <p>Thank you for visiting my personal portfolio website.</p>
       </div>
 
       <div class="box">
@@ -229,7 +230,7 @@
           <div class="share">
               <a href="https://github.com/FazZenterprise" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
               <a href="mailto:fazzdevice@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
-              <a href="https://t.me/presetdrgnel" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a>
+              <a href="https://t.me/prsetdragnel" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a>
           </div>
       </div>
   </div>
