--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <img draggable="false" class="tilt" src="FotoSaya.jpg" alt="">
     </div>
     <div class="content">
-        <h3>I'm Fazry</h3>
+        <h3>I'm Fazri Yansyah</h3>
         <span class="tag">Junior Developer</span>
         
         <p> Saya seorang pelajar yang berusaha untuk mengembangkan skil saya yang di masa depan nanti mempunyai
@@ -133,7 +133,7 @@
 
     <div class="box">
         <div class="image">
-        <img draggable="false" src=SMKN12.jpg" alt="pict">
+        <img draggable="false" src="SMK Negeri12jpg" alt="pict">
         </div>
         <div class="content">
         <h3>SMK Negeri 12 Kabupaten Tangerang</h3>
