--- a/index.html
+++ b/index.html
@@ -132,14 +132,14 @@
     <div class="box-container">
 
     <div class="box">
-        <div class="image">
-        <img draggable="false" src="SMK Negeri12jpg" alt="pict">
-        </div>
-        <div class="content">
-        <h3>SMK Negeri 12 Kabupaten Tangerang</h3>
-        <p>A school that is different from others is that it uses a military system, and I was educated here in the | PPLG department.</p>
-        <h4>2024-2027 | Pursuing</h4>
-        </div>
+      <div class="image">
+      <img draggable="false" src="SMK Negeri12.jpg" alt="pict">
+      </div>
+      <div class="content">
+      <h3>SMK Negeri 12 Kabupaten Tangerang</h3>
+      <p>A school that is different from others is that it uses a military system, and I was educated here in the PPLG department</p>
+      <h4>2021-2024 | Completed</h4>
+      </div>
     </div>
 
     <div class="box">
