--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       <div class="content">
       <h3>SMK Negeri 12 Kabupaten Tangerang</h3>
       <p>A school that is different from others is that it uses a military system, and I was educated here in the PPLG department</p>
-      <h4>2021-2024 | Completed</h4>
+      <h4>2024-2027 | Pursuing</h4>
       </div>
     </div>
 
