--- a/index.html
+++ b/index.html
@@ -174,8 +174,13 @@
 
   <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
 
-  <div class="box-container">
-
+   <div class="cover-container">
+        <div class="cover-image">
+            <img src="Projects.jpg" alt="Project Cover">
+        </div>
+        <p class="image-caption">This is the cover of my project</p>
+        <button class="view-btn">View</button>
+  </div>
     <!-- <div class="box tilt">
       <img draggable="false" src="./assets/images/projects/portfolio1.PNG" alt="" />
       <div class="content">
