--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@
 
   <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
 
-   
+   <div class="box-container">
+       
     <!-- <div class="box tilt">
       <img draggable="false" src="./assets/images/projects/portfolio1.PNG" alt="" />
       <div class="content">
