--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <!-- navbar starts -->
 <header>
-        <a href="im.png"></i> Fazri</a>
+        <img src="im.png"></i> Fazri</a>
 
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
