--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <!-- navbar starts -->
 <header>
-        <img src="im.png"></i> Fazri</a>
+        <img src="im.png"><h1>Fazry</h1>
 
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
@@ -175,7 +175,7 @@
   <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
 
    <div class="box-container">
-       
+       <img src="Newimage.png" Alt="project">
     <!-- <div class="box tilt">
       <img draggable="false" src="./assets/images/projects/portfolio1.PNG" alt="" />
       <div class="content">
