--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
 <!-- navbar starts -->
 <header>
-        <img src="im.png"><h1>Fazry</h1>
+        <div><img src="im.png"><span>
+            <h1>Fazry</h1></span></div>
 
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
