--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
 <!-- navbar starts -->
 <header>
-        <div><img src="im.png"><span>
-            <h1>Fazry</h1></span></div>
+        <div><img src="im.png">
+            <h2>Fazry</h2></div>
 
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
@@ -175,8 +175,9 @@
 
   <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
 
-   <div class="box-container">
-       <img src="Newimage.png" Alt="project">
+   <div class="box-container"
+       <img src="Newimage.png" Alt="project">>
+       
     <!-- <div class="box tilt">
       <img draggable="false" src="./assets/images/projects/portfolio1.PNG" alt="" />
       <div class="content">
