--- a/index.html
+++ b/index.html
@@ -11,8 +11,105 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Favicon -->
-    <link rel="icon" href="im.png" type="image/png">
+    <div class="logo">FZ</div>
     <title>Portfolio | Fazri Yansyah</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #1a1a2e;
+            color: #ffffff;
+        }
+        header {
+            background-color: #ffffff;
+            color: #000000;
+            padding: 1rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .logo {
+            font-size: 1.5rem;
+            font-weight: bold;
+        }
+        nav {
+            display: none;
+        }
+        .projects {
+            padding: 1rem;
+        }
+        .projects-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 1rem;
+            padding: 1rem 0;
+        }
+        .project-card {
+            background-color: #ffffff;
+            color: #000000;
+            border-radius: 8px;
+            overflow: hidden;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            cursor: pointer;
+            display: flex;
+            flex-direction: column;
+        }
+        .project-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 5px 15px rgba(255, 255, 255, 0.2);
+        }
+        .project-title {
+            background-color: #ffd700;
+            padding: 0.5rem;
+            font-weight: bold;
+        }
+        .project-content {
+            padding: 1rem;
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+        .project-description {
+            margin-bottom: 1rem;
+        }
+        .button-group {
+            display: flex;
+            justify-content: space-between;
+        }
+        .button {
+            display: inline-block;
+            padding: 0.5rem 1rem;
+            background-color: #333333;
+            color: #ffffff;
+            text-decoration: none;
+            border-radius: 4px;
+            transition: background-color 0.3s ease, transform 0.2s ease;
+            flex: 1;
+            text-align: center;
+            margin: 0 0.25rem;
+        }
+        .button:hover {
+            background-color: #555555;
+            transform: scale(1.05);
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        @keyframes slideIn {
+            from { transform: translateY(50px); opacity: 0; }
+            to { transform: translateY(0); opacity: 1; }
+        }
+        .project-card {
+            animation: slideIn 0.5s ease-out forwards;
+            opacity: 0;
+        }
+        .project-card:nth-child(1) { animation-delay: 0.1s; }
+        .project-card:nth-child(2) { animation-delay: 0.2s; }
+        .project-card:nth-child(3) { animation-delay: 0.3s; }
+</style>
 </head>
 <body oncontextmenu="return false">
 
@@ -175,7 +272,47 @@
 
   <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
 
-   
+   <div class="projects">
+            <h2>Projects Made</h2>
+            <div class="projects-grid">
+                <div class="project-card">
+                    <div class="project-title">Desain Grafis</div>
+                    <div class="project-content">
+                        <div class="project-description">
+                            Proyek desain grafis kreatif untuk berbagai kebutuhan visual.
+                        </div>
+                        <div class="button-group">
+                            <a href="#" class="button">View</a>
+                            <a href="#" class="button">Code</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-title">Web Development</div>
+                    <div class="project-content">
+                        <div class="project-description">
+                            Pengembangan website responsif dengan teknologi modern.
+                        </div>
+                        <div class="button-group">
+                            <a href="#" class="button">View</a>
+                            <a href="#" class="button">Code</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-title">Mobile App</div>
+                    <div class="project-content">
+                        <div class="project-description">
+                            Aplikasi mobile inovatif untuk Android dan iOS.
+                        </div>
+                        <div class="button-group">
+                            <a href="#" class="button">View</a>
+                            <a href="#" class="button">Code</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+   </div>
        
     <!-- <div class="box tilt">
       <img draggable="false" src="./assets/images/projects/portfolio1.PNG" alt="" />
