--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Favicon -->
-    <div class="logo">FZ</div>
+    <link rel="icon" href="im.png" type="image/png">
     <title>Portfolio | Fazri Yansyah</title>
     <style>
         .logo {
@@ -105,9 +105,7 @@
 
 <!-- navbar starts -->
 <header>
-        <div><img src="im.png">
-            <h2>Fazry</h2></div>
-
+        <div class="logo">FZ</div>
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
             <ul>
