--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
   <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
 
    <div class="projects">
+       <div class="projects">
         <div class="project-card">
             <div class="project-title">Desain Grafis</div>
             <div class="project-content">
@@ -278,7 +279,43 @@
                 </div>
             </div>
         </div>
-   </div>
+        <div class="project-card">
+            <div class="project-title">UI/UX Design</div>
+            <div class="project-content">
+                <div class="project-description">
+                    Desain Antarmuka Pengguna Yang Intuitif Dan Menarik.
+                </div>
+                <div class="button-group">
+                    <a href="#" class="button">View</a>
+                    <a href="#" class="button">Code</a>
+                </div>
+            </div>
+        </div>
+        <div class="project-card">
+            <div class="project-title">Data Analysis</div>
+            <div class="project-content">
+                <div class="project-description">
+                    Analisis Data Mendalam Untuk Pengambilan Keputusan.
+                </div>
+                <div class="button-group">
+                    <a href="#" class="button">View</a>
+                    <a href="#" class="button">Code</a>
+                </div>
+            </div>
+        </div>
+        <div class="project-card">
+            <div class="project-title">AI Integration</div>
+            <div class="project-content">
+                <div class="project-description">
+                    Implementasi Kecerdasan Buatan Dalam Aplikasi Modern.
+                </div>
+                <div class="button-group">
+                    <a href="#" class="button">View</a>
+                    <a href="#" class="button">Code</a>
+                </div>
+            </div>
+        </div>
+       </div>
        
     <!-- <div class="box tilt">
       <img draggable="false" src="./assets/images/projects/portfolio1.PNG" alt="" />
