--- a/index.html
+++ b/index.html
@@ -277,37 +277,31 @@
                     <a href="#" class="button">View</a>
                     <a href="#" class="button">Code</a>
                 </div>
-            </div>
-        </div>
         <div class="project-card">
-            <div class="project-title">UI/UX Design</div>
+            <div class="project-title">Mobile App</div>
             <div class="project-content">
                 <div class="project-description">
-                    Desain Antarmuka Pengguna Yang Intuitif Dan Menarik.
+                    Aplikasi Mobile Inovatif Untuk Android Dan iOS.
                 </div>
                 <div class="button-group">
                     <a href="#" class="button">View</a>
                     <a href="#" class="button">Code</a>
                 </div>
-            </div>
-        </div>
         <div class="project-card">
-            <div class="project-title">Data Analysis</div>
+            <div class="project-title">Mobile App</div>
             <div class="project-content">
                 <div class="project-description">
-                    Analisis Data Mendalam Untuk Pengambilan Keputusan.
+                    Aplikasi Mobile Inovatif Untuk Android Dan iOS.
                 </div>
                 <div class="button-group">
                     <a href="#" class="button">View</a>
                     <a href="#" class="button">Code</a>
                 </div>
-            </div>
-        </div>
         <div class="project-card">
-            <div class="project-title">AI Integration</div>
+            <div class="project-title">Mobile App</div>
             <div class="project-content">
                 <div class="project-description">
-                    Implementasi Kecerdasan Buatan Dalam Aplikasi Modern.
+                    Aplikasi Mobile Inovatif Untuk Android Dan iOS.
                 </div>
                 <div class="button-group">
                     <a href="#" class="button">View</a>
