--- a/index.html
+++ b/index.html
@@ -23,47 +23,61 @@
         }
         .projects {
             padding: 1rem;
-            display: flex;
-            flex-direction: column;
-            gap: 1rem; /* Menambahkan jarak vertikal antar kartu proyek */
+        }
+        .projects-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 1rem;
+            padding: 1rem 0;
         }
         .project-card {
             background-color: #ffffff;
             color: #000000;
-            border-radius: 12px; /* Membulatkan sudut */
+            border-radius: 8px;
             overflow: hidden;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Menambahkan bayangan halus */
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            cursor: pointer;
+            display: flex;
+            flex-direction: column;
+        }
+        .project-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 5px 15px rgba(255, 255, 255, 0.2);
         }
         .project-title {
             background-color: #ffd700;
-            padding: 0.75rem 1rem;
+            padding: 0.5rem;
             font-weight: bold;
-            font-size: 1.1rem;
         }
         .project-content {
             padding: 1rem;
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
         }
         .project-description {
             margin-bottom: 1rem;
-            font-size: 0.9rem;
         }
         .button-group {
             display: flex;
-            gap: 0.5rem; /* Jarak antar tombol */
+            justify-content: space-between;
         }
         .button {
-            flex: 1;
-            padding: 0.75rem;
+            display: inline-block;
+            padding: 0.5rem 1rem;
             background-color: #333333;
             color: #ffffff;
             text-decoration: none;
-            border-radius: 6px;
+            border-radius: 4px;
+            transition: background-color 0.3s ease, transform 0.2s ease;
+            flex: 1;
             text-align: center;
-            transition: background-color 0.3s ease;
+            margin: 0 0.25rem;
         }
         .button:hover {
             background-color: #555555;
-        }
+            transform: scale(1.05);
         }
         @keyframes fadeIn {
             from { opacity: 0; }
@@ -241,75 +255,46 @@
 
   <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
 
-   <div class="projects">
-       <div class="projects">
-        <div class="project-card">
-            <div class="project-title">Desain Grafis</div>
-            <div class="project-content">
-                <div class="project-description">
-                    Proyek Desain Grafis Kreatif Untuk Berbagai Kebutuhan Visual.
+           <div class="projects">
+            <div class="projects-grid">
+                <div class="project-card">
+                    <div class="project-title">Desain Grafis</div>
+                    <div class="project-content">
+                        <div class="project-description">
+                            Proyek desain grafis kreatif untuk berbagai kebutuhan visual.
+                        </div>
+                        <div class="button-group">
+                            <a href="#" class="button">View</a>
+                            <a href="#" class="button">Code</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="button-group">
-                    <a href="#" class="button">View</a>
-                    <a href="#" class="button">Code</a>
+                <div class="project-card">
+                    <div class="project-title">Web Development</div>
+                    <div class="project-content">
+                        <div class="project-description">
+                            Pengembangan website responsif dengan teknologi modern.
+                        </div>
+                        <div class="button-group">
+                            <a href="#" class="button">View</a>
+                            <a href="#" class="button">Code</a>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
-        <div class="project-card">
-            <div class="project-title">Web Development</div>
-            <div class="project-content">
-                <div class="project-description">
-                    Pengembangan Website Responsif Dengan Teknologi Modern.
-                </div>
-                <div class="button-group">
-                    <a href="#" class="button">View</a>
-                    <a href="#" class="button">Code</a>
-                </div>
-            </div>
-        </div>
-        <div class="project-card">
-            <div class="project-title">Mobile App</div>
-            <div class="project-content">
-                <div class="project-description">
-                    Aplikasi Mobile Inovatif Untuk Android Dan iOS.
-                </div>
-                <div class="button-group">
-                    <a href="#" class="button">View</a>
-                    <a href="#" class="button">Code</a>
-                </div>
-        <div class="project-card">
-            <div class="project-title">Mobile App</div>
-            <div class="project-content">
-                <div class="project-description">
-                    Aplikasi Mobile Inovatif Untuk Android Dan iOS.
-                </div>
-                <div class="button-group">
-                    <a href="#" class="button">View</a>
-                    <a href="#" class="button">Code</a>
-                </div>
-        <div class="project-card">
-            <div class="project-title">Mobile App</div>
-            <div class="project-content">
-                <div class="project-description">
-                    Aplikasi Mobile Inovatif Untuk Android Dan iOS.
-                </div>
-                <div class="button-group">
-                    <a href="#" class="button">View</a>
-                    <a href="#" class="button">Code</a>
-                </div>
-        <div class="project-card">
-            <div class="project-title">Mobile App</div>
-            <div class="project-content">
-                <div class="project-description">
-                    Aplikasi Mobile Inovatif Untuk Android Dan iOS.
-                </div>
-                <div class="button-group">
-                    <a href="#" class="button">View</a>
-                    <a href="#" class="button">Code</a>
+                <div class="project-card">
+                    <div class="project-title">Mobile App</div>
+                    <div class="project-content">
+                        <div class="project-description">
+                            Aplikasi mobile inovatif untuk Android dan iOS.
+                        </div>
+                        <div class="button-group">
+                            <a href="#" class="button">View</a>
+                            <a href="#" class="button">Code</a>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-       </div>
+           </div>
        
     <!-- <div class="box tilt">
       <img draggable="false" src="./assets/images/projects/portfolio1.PNG" alt="" />
