--- a/index.html
+++ b/index.html
@@ -293,6 +293,18 @@
                         </div>
                     </div>
                 </div>
+                <div class="project-card">
+                    <div class="project-title">UX Designer</div>
+                    <div class="project-content">
+                        <div class="project-description">
+                            This User experience.
+                        </div>
+                        <div class="button-group">
+                            <a href="#" class="button">View</a>
+                            <a href="#" class="button">Code</a>
+                        </div>
+                    </div>
+                </div>
             </div>
            </div>
        
