--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         .project-card:nth-child(1) { animation-delay: 0.1s; }
         .project-card:nth-child(2) { animation-delay: 0.2s; }
         .project-card:nth-child(3) { animation-delay: 0.3s; }
+        .project-card:nth-child(4) { animation-delay: 0,4s; }
 </style>
 </head>
 <body oncontextmenu="return false">
