--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             background-color: #555555;
             transform: scale(1.05);
         }
-        @keyframes fadeIn {
+                @keyframes fadeIn {
             from { opacity: 0; }
             to { opacity: 1; }
         }
@@ -94,7 +94,13 @@
         .project-card:nth-child(1) { animation-delay: 0.1s; }
         .project-card:nth-child(2) { animation-delay: 0.2s; }
         .project-card:nth-child(3) { animation-delay: 0.3s; }
-        .project-card:nth-child(4) { animation-delay: 0,4s; }
+        .project-card:nth-child(4) { animation-delay: 0.4s; }
+
+        @media (max-width: 768px) {
+            .projects-grid {
+                grid-template-columns: 1fr;
+            }
+        }
 </style>
 </head>
 <body oncontextmenu="return false">
