--- a/index.html
+++ b/index.html
@@ -262,58 +262,42 @@
 
   <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
 
-           <div class="projects">
+            <div class="projects">
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-title">Desain Grafis</div>
-                    <div class="project-content">
-                        <div class="project-description">
-                            Proyek desain grafis kreatif untuk berbagai kebutuhan visual.
-                        </div>
-                        <div class="button-group">
-                            <a href="#" class="button">View</a>
-                            <a href="#" class="button">Code</a>
-                        </div>
+                    <p>Proyek desain grafis kreatif menggunakan Adobe Creative Suite.</p>
+                    <div class="project-buttons">
+                        <a href="#" class="button">View</a>
+                        <a href="#" class="button">Code</a>
                     </div>
                 </div>
                 <div class="project-card">
                     <div class="project-title">Web Development</div>
-                    <div class="project-content">
-                        <div class="project-description">
-                            Pengembangan website responsif dengan teknologi modern.
-                        </div>
-                        <div class="button-group">
-                            <a href="#" class="button">View</a>
-                            <a href="#" class="button">Code</a>
-                        </div>
+                    <p>Pengembangan situs web responsif dengan HTML, CSS, dan JavaScript.</p>
+                    <div class="project-buttons">
+                        <a href="#" class="button">View</a>
+                        <a href="#" class="button">Code</a>
                     </div>
                 </div>
                 <div class="project-card">
                     <div class="project-title">Mobile App</div>
-                    <div class="project-content">
-                        <div class="project-description">
-                            Aplikasi mobile inovatif untuk Android dan iOS.
-                        </div>
-                        <div class="button-group">
-                            <a href="#" class="button">View</a>
-                            <a href="#" class="button">Code</a>
-                        </div>
+                    <p>Aplikasi mobile inovatif dikembangkan menggunakan React Native.</p>
+                    <div class="project-buttons">
+                        <a href="#" class="button">View</a>
+                        <a href="#" class="button">Code</a>
                     </div>
                 </div>
                 <div class="project-card">
-                    <div class="project-title">UX Designer</div>
-                    <div class="project-content">
-                        <div class="project-description">
-                            This User experience.
-                        </div>
-                        <div class="button-group">
-                            <a href="#" class="button">View</a>
-                            <a href="#" class="button">Code</a>
-                        </div>
+                    <div class="project-title">UI/UX Design</div>
+                    <p>Desain antarmuka pengguna yang intuitif dan pengalaman pengguna yang menarik.</p>
+                    <div class="project-buttons">
+                        <a href="#" class="button">View</a>
+                        <a href="#" class="button">Code</a>
                     </div>
                 </div>
             </div>
-           </div>
+                   </div>
        
     <!-- <div class="box tilt">
       <img draggable="false" src="./assets/images/projects/portfolio1.PNG" alt="" />
