--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
   <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
 
-            <div class="projects">
+                    <div class="projects">
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-title">Desain Grafis</div>
@@ -289,15 +289,15 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <div class="project-title">UI/UX Design</div>
-                    <p>Desain antarmuka pengguna yang intuitif dan pengalaman pengguna yang menarik.</p>
+                    <div class="project-title">Desain Grafis</div>
+                    <p>Proyek desain grafis kreatif menggunakan Adobe Creative Suite.</p>
                     <div class="project-buttons">
                         <a href="#" class="button">View</a>
                         <a href="#" class="button">Code</a>
                     </div>
                 </div>
             </div>
-                   </div>
+        </div>
        
     <!-- <div class="box tilt">
       <img draggable="false" src="./assets/images/projects/portfolio1.PNG" alt="" />
