--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             background-color: #555555;
             transform: scale(1.05);
         }
-                @keyframes fadeIn {
+        @keyframes fadeIn {
             from { opacity: 0; }
             to { opacity: 1; }
         }
@@ -94,8 +94,8 @@
         .project-card:nth-child(1) { animation-delay: 0.1s; }
         .project-card:nth-child(2) { animation-delay: 0.2s; }
         .project-card:nth-child(3) { animation-delay: 0.3s; }
-        .project-card:nth-child(4) { animation-delay: 0.4s; }
-</style>
+        .project-card:nth-child(3) { animation-delay: 0.4s; }
+    </style>
 </head>
 <body oncontextmenu="return false">
 
@@ -256,42 +256,47 @@
 
   <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
 
-                    <div class="projects">
+            <div class="projects">
+            <h2>Projects Made</h2>
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-title">Desain Grafis</div>
-                    <p>Proyek desain grafis kreatif menggunakan Adobe Creative Suite.</p>
-                    <div class="project-buttons">
-                        <a href="#" class="button">View</a>
-                        <a href="#" class="button">Code</a>
+                    <div class="project-content">
+                        <div class="project-description">
+                            Proyek desain grafis kreatif untuk berbagai kebutuhan visual.
+                        </div>
+                        <div class="button-group">
+                            <a href="#" class="button">View</a>
+                            <a href="#" class="button">Code</a>
+                        </div>
                     </div>
                 </div>
                 <div class="project-card">
                     <div class="project-title">Web Development</div>
-                    <p>Pengembangan situs web responsif dengan HTML, CSS, dan JavaScript.</p>
-                    <div class="project-buttons">
-                        <a href="#" class="button">View</a>
-                        <a href="#" class="button">Code</a>
+                    <div class="project-content">
+                        <div class="project-description">
+                            Pengembangan website responsif dengan teknologi modern.
+                        </div>
+                        <div class="button-group">
+                            <a href="#" class="button">View</a>
+                            <a href="#" class="button">Code</a>
+                        </div>
                     </div>
                 </div>
                 <div class="project-card">
                     <div class="project-title">Mobile App</div>
-                    <p>Aplikasi mobile inovatif dikembangkan menggunakan React Native.</p>
-                    <div class="project-buttons">
-                        <a href="#" class="button">View</a>
-                        <a href="#" class="button">Code</a>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-title">Desain Grafis</div>
-                    <p>Proyek desain grafis kreatif menggunakan Adobe Creative Suite.</p>
-                    <div class="project-buttons">
-                        <a href="#" class="button">View</a>
-                        <a href="#" class="button">Code</a>
+                    <div class="project-content">
+                        <div class="project-description">
+                            Aplikasi mobile inovatif untuk Android dan iOS.
+                        </div>
+                        <div class="button-group">
+                            <a href="#" class="button">View</a>
+                            <a href="#" class="button">Code</a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+            </div>
        
     <!-- <div class="box tilt">
       <img draggable="false" src="./assets/images/projects/portfolio1.PNG" alt="" />
